--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -11,9 +11,9 @@
     xmlns:o="http://omnifaces.org/ui"
     xmlns:jsf="http://xmlns.jcp.org/jsf"
     xmlns:ds="http://deltaspike.apache.org/jsf">
-    
+
     <!-- THIS IS FOR TESTING PURPOSE, DO NOT USE IT FOR ACTUAL PAGES -->
-    
+
 <h:head>
     <meta charset="utf-8" />
     <meta
@@ -58,29 +58,52 @@
     <title><h:outputText value="#{HelperForm.applicationHeaderTitle} - #{HelperForm.version}" /></title>
 
     <!-- Bootstrap -->
+    <!--
     <link
         rel="stylesheet"
         href="template/css/bootstrap.min.css?v=#{HelperForm.buildVersion}" />
+    -->
+    <!--
     <link
         rel="stylesheet"
         href="template/css/bootstrap-slider.css?v=#{HelperForm.buildVersion}" />
+    -->
     <!-- Theme CSS -->
+    <!--
     <link
         rel="stylesheet"
         href="template/css/style.css?v=#{HelperForm.buildVersion}" />
+    -->
     <!-- Font Awesome CSS -->
+    <!--
     <link
         rel="stylesheet"
         href="template/css/font-awesome.css?v=#{HelperForm.buildVersion}" />
+    -->
     <!-- Color CSS -->
+    <!--
     <link
         rel="stylesheet"
         href="template/css/themes.css?v=#{HelperForm.buildVersion}" />
+    -->
     <!-- intranda -->
+    <!--
     <link
         rel="stylesheet"
         href="template/css/intranda.css?v=#{HelperForm.buildVersion}" />
-    <!-- <link rel="stylesheet" href="template/css/dist/goobiWorkflow.min.css?v=#{HelperForm.buildVersion}" /> -->
+    <link rel="stylesheet" href="template/css/dist/goobiWorkflow.min.css?v=#{HelperForm.buildVersion}" />
+    -->
+
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="templatePG/css/lib/font-awesome.css?v=#{HelperForm.buildVersion}" />
+
+    <!-- Main styles (BS 5 + custom styles) -->
+    <link rel="stylesheet" href="templatePG/css/dist/bundle.css?v=#{HelperForm.buildVersion}" />
+
+    <!-- ZLB styles -->
+    <link rel="stylesheet" href="template/assets/css/index.css?v=#{HelperForm.buildVersion}" />
+
 
     <script src="template/js/intranda.js?v=1.2"></script>
     <!-- jQuery -->
@@ -132,11 +155,6 @@
         rel="apple-touch-icon-precomposed"
         href="template/img/apple-touch-icon.png" />
 
-    <style>
-#navigation {
-    background: green;
-}
-</style>
     <!-- WCAG compatibility CSS -->
 
     <ui:fragment rendered="#{LoginForm.myBenutzer == null ? HelperForm.renderAccessibilityCss : LoginForm.myBenutzer.uiMode=='accessibility'}">
@@ -151,9 +169,23 @@
 
 <h:body
     styleClass="#{LoginForm.myBenutzer == null?'login':'sidebar-right'}"
-    style="background-color: green; min-height:300px;">
+    >
     <ds:windowId />
     <f:view locale="#{SpracheForm.locale}">
+
+    <ui:include src="../includes/header.xhtml" />
+
+    <!--
+    <nav class="navigation-breadcrumb" aria-label="navigationBreadcrumb">
+      <h:form style="margin:0px;" id="breadcrumb">
+          <div class="breadcrumbs">
+              <ul>
+                  <ui:insert name="breadcrumb" />
+              </ul>
+          </div>
+      </h:form>
+    </nav>
+    -->
 
         <h:panelGroup rendered="#{LoginForm.myBenutzer==null}">
             <ui:include src="external_login.xhtml" />
@@ -161,7 +193,7 @@
 
         <c:if test="#{LoginForm.myBenutzer!=null}">
             <ui:include src="include_userConfiguration.xhtml" />
-            
+
             <div
                 class="container-fluid"
                 id="content"
@@ -222,23 +254,25 @@
             </div>
         </c:if>
 
+        <ui:include src="../includes/footer.xhtml" />
+
         <!-- JAVASCRIPT -->
         <script src="template/js/dist/goobiWorkflowJS.min.js?v=#{HelperForm.buildVersion}"></script>
         <script>
-                                    
-                                    
-                                    
+
+
+
             // goobiWorkflowConfig = {};
 
             // goobiWorkflowJS.init(goobiWorkflowConfig);
-        
-                                
-                                
+
+
+
                                 </script>
         <script>
-                                    
-                                    
-                                    
+
+
+
      // <![CDATA[
             jsf.ajax.addOnEvent(function (data) {
                 var ajaxstatus = data.status; // Can be "begin", "complete" and "success"
@@ -301,16 +335,16 @@
                     myButton.click();
                 }
             });
-            
+
             window.myfaces = window.myfaces || {};
             myfaces.config = myfaces.config || {};
             //set the config part
             myfaces.config.no_portlet_env = true;
 
          // ]]>
-        
-                                
-                                
+
+
+
                                 </script>
     </f:view>
 </h:body>
